# text_change_detector

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/adr/: 001.prominence_vs_MAD_plus_z_score.md
docs/plans/: concurrent-review.md
experiments/: 01_tiling_long_single_topic.ipynb  02_tiling_and_detection_polish_law.ipynb  03_floor_vs_zscore.ipynb  04_zscore_failure_diagnosis.ipynb  05_trusted_boundaries.ipynb  06_prominence_cross_embedder.ipynb  07_prominence_in_build_groups.ipynb  08_reader_parity.ipynb  README.md
src/text_change_detector/: __init__.py  embedder.py
src/text_change_detector/detection/: __init__.py  llm.py  models.py  pipeline.py
src/text_change_detector/detection/prompts/: __init__.py  en.py  pl.py
src/text_change_detector/shared/: __init__.py  graph.py  models.py
src/text_change_detector/tiling/: __init__.py  pipeline.py
src/text_change_detector/tiling/extraction/: __init__.py  docx.py  pdf.py  shared.py  text.py
tests/: conftest.py  helpers.py  test_embedder.py  test_models.py  test_shared.py
tests/detection/: test_llm.py  test_pipeline.py
tests/tiling/: test_pipeline.py
tests/tiling/extraction/: test_docx.py  test_pdf.py  test_shared.py  test_text.py
