[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text-change-detector"
version = "0.5.0"
description = "Split text into semantic units and detect which units a proposed change impacts, using embeddings, graph clustering and an LLM."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Marek Małek", email = "mmalek06@gmail.com" }]
keywords = [
    "nlp",
    "semantic-units",
    "text-segmentation",
    "change-impact",
    "embeddings",
    "requirements",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "networkx>=3.2",
    "spacy>=3.7",
    "sentence-transformers>=2.7",
    "torch>=2.1",
    "pydantic>=2.5",
    "python-docx>=1.1",
    "langchain-ollama>=0.1",
]

[project.urls]
Repository = "https://github.com/mmalek06/text_change_detector"
Issues = "https://github.com/mmalek06/text_change_detector/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "scipy-stubs~=1.18.0",
    # spaCy model used only by the test suite (built-in extractor tests). It is a
    # URL dependency, so it must never leak into the published package - keeping it
    # here in the dev group ensures it stays test-only.
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "jupyterlab>=4.6.1",
    "ipykernel>=7.3.0",
    "nbconvert>=7.17.1",
    "matplotlib>=3.11.0",
    "pl-core-news-sm",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.hatch.build.targets.wheel]
packages = ["src/text_change_detector"]

[tool.hatch.build.targets.sdist]
include = ["src/text_change_detector", "README.md", "LICENSE"]

[tool.uv.sources]
pl-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/pl_core_news_sm-3.8.0/pl_core_news_sm-3.8.0-py3-none-any.whl" }
